Added the scrolltotop functionality

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="mobile-nav">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li class="mobile-sub-menu "><span class="arrow "><i class="fa fa-plus"></i></span><a href="#">Our Products</a>
+                        <li class="mobile-sub-menu"><span class="arrow"><i class="fa fa-plus"></i></span><a href="#">Our Products</a>
                             <ul class="submenu">
                                 <li><a href="#">OVERWOOD PRIME</a></li>
                                 <li ><a href="#">OVERWOOD DOLLAR</a></li>
@@ -484,7 +484,7 @@
             </ul>
         </div>
      </div></div>
-     <a id="back-to-top" href="#" class="show"></a>
+     <a id="back-to-top" href="#" ></a>
     </footer>
     </div>
     
@@ -551,7 +551,7 @@
         });
       </script>
       <script src="./assets/js/index.js">
-      
+
     </script>
 </body>
 </html>
